<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondo">


    <TextView
        android:id="@+id/login_texto3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/para_cerrar_sesi_n_en_todos_los_dispositivos"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/login_texto_usuario"
        app:layout_constraintEnd_toEndOf="@+id/login_texto"
        app:layout_constraintStart_toStartOf="@+id/login_texto"
        app:layout_constraintTop_toBottomOf="@+id/login_texto" />

    <TextView
        android:id="@+id/login_texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/reestablecer_accesos"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/login_texto_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_texto_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="16dp"
        android:text="@string/email"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/email_reestablecer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_texto" />

    <EditText
        android:id="@+id/email_reestablecer"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="66dp"
        android:ems="10"
        android:hint="@string/example_example_example"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/texto_clave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_texto_usuario"
        android:autofillHints="" />

    <TextView
        android:id="@+id/texto_clave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="32dp"
        android:text="@string/clave_maestra"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/clave_reestablecer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_reestablecer" />

    <EditText
        android:id="@+id/clave_reestablecer"
        android:layout_width="294dp"
        android:layout_height="50dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:ems="10"
        android:hint="@string/introduzca_su_clave_maestra"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/enviar_codigo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texto_clave"
        android:importantForAutofill="no"
        android:focusable="true" />

    <Button
        android:id="@+id/enviar_codigo"
        style="@android:style/Widget.DeviceDefault.Light.Button.Toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="32dp"
        android:onClick="goSiguiente"
        android:text="@string/enviar_c_digo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>