<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inicio"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:forceDarkAllowed="false"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="-16dp">

        <TextView
            android:id="@+id/inicio_bienvenido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:text="@string/inicio_bienvenido"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/inicio_logo"
            android:layout_width="315dp"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="39dp"
            android:contentDescription="@string/inicio_logo"
            app:layout_constraintBottom_toTopOf="@+id/inicio_nUsers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inicio_bienvenido"
            app:srcCompat="@drawable/pandora_texto_borde_blanco" />

        <TextView
            android:id="@+id/inicio_subtexto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="187dp"
            android:text="@string/inicio_subtexto"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="@+id/inicio_logo"
            app:layout_constraintStart_toStartOf="@+id/inicio_logo"
            app:layout_constraintTop_toBottomOf="@+id/inicio_bienvenido" />

        <Button
            android:id="@+id/inicio_login"
            style="@android:style/Widget.DeviceDefault.Light.Button.Toggle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="238dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="237dp"
            android:onClick="goLogin"
            android:text="@string/inicio_login"
            app:layout_constraintBottom_toTopOf="@+id/inicio_texto2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/inicio_subtexto" />


        <Button
            android:id="@+id/inicio_contacto"
            style="@android:style/Widget.DeviceDefault.Light.Button.Toggle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="55dp"
            android:onClick="goContacto"
            android:text="@string/inicio_contacto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/inicio_texto2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="39dp"
            android:text="@string/inicio_texto2"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/inicio_contacto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/inicio_nUsers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginBottom="39dp"
            android:text="0"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/inicio_text_nUsers"
            app:layout_constraintStart_toStartOf="@+id/inicio_logo" />

        <TextView
            android:id="@+id/inicio_text_nUsers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="83dp"
            android:layout_marginBottom="56dp"
            android:text="Usuarios registrados"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/inicio_login"
            app:layout_constraintStart_toStartOf="@+id/inicio_login" />

        <TextView
            android:id="@+id/inicio_nPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:layout_marginEnd="29dp"
            android:text="0"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/inicio_logo"
            app:layout_constraintTop_toBottomOf="@+id/inicio_logo" />

        <TextView
            android:id="@+id/inicio_text_nPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="101dp"
            android:layout_marginTop="39dp"
            android:layout_marginEnd="103dp"
            android:text="Contraseñas guardadas"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/inicio_subtexto"
            app:layout_constraintTop_toBottomOf="@+id/inicio_nPass" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>